--- a/fr/effet-matilda.html
+++ b/fr/effet-matilda.html
@@ -20,16 +20,19 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="/assets/site.webmanifest" />
 </head>
+
 <body>
     <header class="header">
         <a href="/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
         </a>
+
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
         </button>
+
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
                 <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
@@ -43,37 +46,47 @@
     </header>
 
     <main>
-        <div class="hero-other">
-             <a href="index.html" class="hero-button">Retour à l'accueil <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
+        <div class="hero">
+            <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
+                <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
+            </a>
         </div>
+
         <section class="introduction">
             <h1 class="title">L’Effet Matilda</h1>
         </section>
 
-        <section class="content">
+        <section class="article-section">
             <h2 class="section-title">Qu'est-ce que l'Effet Matilda</h2>
+
             <p>
                 L’effet Matilda désigne un biais systématique par lequel les contributions des femmes scientifiques sont déniées ou minimisées, leurs travaux étant souvent attribués à des collègues masculins. Ce phénomène a été formalisé par l’historienne des sciences Margaret W. Rossiter en 1993, qui a voulu mettre en lumière une injustice persistante dans le monde scientifique. Le nom rend hommage à Matilda Joslyn Gage, une militante américaine pour le droit de vote des femmes et abolitionniste, qui avait déjà identifié ce type de biais dès 1870.
             </p>
-            <img src="/assets/img/matilda.avif" class="matilda" loading="lazy" />
+
+            <img src="/assets/img/matilda.avif" class="card-image" loading="lazy" />
+
             <p>
                 Dans son essai Woman as Inventor, publié cette année-là, Matilda Joslyn Gage écrivait : « Les inventions et découvertes des femmes ont été si nombreuses et importantes, et pourtant, dans presque chaque cas, elles ont été attribuées à des hommes. » Son constat, formulé il y a plus d’un siècle, reste frappant par sa pertinence encore aujourd’hui, illustrant la difficulté pour les femmes d’obtenir une reconnaissance égale dans des domaines scientifiques et techniques.
             </p>
+
             <p>
                 L’effet Matilda s’inscrit dans une dynamique plus large de reconnaissance académique et sociale. Il est intimement lié à l’effet Matthieu, identifié par le sociologue Robert K. Merton, selon lequel les scientifiques déjà célèbres ou influents reçoivent davantage de crédit pour des contributions similaires à celles de chercheurs moins connus. L’effet Matilda y ajoute une dimension de genre : même lorsque les femmes sont à l’origine de découvertes majeures, leur rôle est souvent éclipsé par celui de collègues masculins, parfois pour des raisons institutionnelles, parfois en raison de stéréotypes culturels profondément enracinés.
             </p>
+
             <p>
                 Ce biais peut se manifester de différentes manières : les femmes scientifiques sont parfois exclues des publications, de la co-signature d’articles, des récompenses ou des nominations prestigieuses. Leur travail peut être interprété comme secondaire ou complémentaire, même lorsqu’il est central à la recherche. Des études contemporaines ont montré que ces tendances persistent encore dans de nombreux domaines, de la physique à la biologie, et contribuent à expliquer la sous-représentation des femmes dans certaines disciplines et dans les instances dirigeantes académiques.
             </p>
+
             <p>
                 L’effet Matilda a été mis en lumière dans des cas célèbres, comme celui de Mileva Marić, la première épouse d’Albert Einstein, dont le rôle dans les travaux sur la relativité reste débattu mais qui illustre parfaitement le type de contribution scientifique féminine souvent invisible dans l’histoire. D’autres exemples historiques incluent Rosalind Franklin, dont les travaux ont été cruciaux pour la découverte de la structure de l’ADN, mais dont la reconnaissance fut longtemps éclipsée par ses collègues masculins.
             </p>
+
             <p>
                 Comprendre l’effet Matilda permet non seulement de revisiter l’histoire des sciences sous un angle plus juste, mais aussi de réfléchir aux mécanismes contemporains de discrimination et de valorisation dans le milieu scientifique. Mettre en lumière ces biais contribue à créer des environnements de recherche plus équitables et à reconnaître pleinement les contributions des femmes aux découvertes scientifiques majeures.
             </p>
 
             <div class="cards-container">
-                <img src="/assets/icons/Medal.svg" alt="Medal" loading="lazy" />
+                <img src="/assets/icons/Medal.svg" alt="card-image" loading="lazy" />
                 <h3 class="card-title">Conséquences</h3>
                 <ul>
                     <li>Perte de reconnaissance historique</li>
@@ -87,24 +100,36 @@
 
         <section class="content">
             <h2 class="section-title">Exemples Notables</h2>
+
             <p>
                 Sur les plus de 900 prix Nobel scientifiques décernés depuis 1901, moins de 4% ont été attribués à des femmes. Parmi ces rares lauréates, plusieurs cas documentés montrent que d'autres femmes scientifiques ont été exclues alors que leurs contributions étaient essentielles à la découverte récompensée.
             </p>
+        </section>
 
         <section class="other-articles">
             <h3 class="section-title">Lire aussi</h3>
-            <a href="/fr/article.html" class="cta-button">Femme de Science dans la Littérature <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></a>
-            <br>
-            <a href="/fr/histoire.html" class="cta-button">Mileva Einstein : La Chercheuse <img src="/assets/icons/fleche.svg" alt="" loading="lazy" /></a>
-        </section>
 
+            <a href="/fr/article.html" class="cta-button">
+                Femme de Science dans la Littérature 
+                <img src="/assets/icons/fleche.svg" alt="" loading="lazy" />
+            </a>
+
+            <br>
+
+            <a href="/fr/histoire.html" class="cta-button">
+                Mileva Einstein : La Chercheuse 
+                <img src="/assets/icons/fleche.svg" alt="" loading="lazy" />
+            </a>
+        </section>
     </main>
+
     <footer class="footer">
         <div class="footer-content">
             <a href="/index.html" class="footer-logo">
                 <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
                 <p>Chronova</p>
             </a>
+
             <nav class="footer-nav" aria-label="Navigation du footer">
                 <p class="footer-nav-title">Liens utiles</p>
                 <ul class="footer-nav-list">
@@ -115,6 +140,7 @@
                 </ul>
             </nav>
         </div>
+
         <div class="footer-social">
             <p class="social-title">Nous suivre</p>
             <div class="social-links">
@@ -129,6 +155,7 @@
                 </a>
             </div>
         </div>
+
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
