--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <main>
         <div class="hero">
-            <img src="assets/img/mileva.avif" class="mileva" loading="lazy" />
+            <img src="/assets/img/mileva.avif" class="mileva" loading="lazy" />
         </div>
         <section class="introduction">
             <h1 class="title">Mileva Einstein</h1>
@@ -78,46 +78,49 @@
             </div>
         </section>
 
-        <section class="theorie">
+        <section class="content">
             <h2 class="section-title">L'Espace-Temps & La Lumière</h2>
-            <p class="theorie-description">Les travaux de Mileva Einstein sur la relativité restreinte ont révolutionné notre compréhension de l'univers, unifiant l'espace et le temps en une seule structure mathématique.</p>
+            <p class="content-description">Les travaux de Mileva Einstein sur la relativité restreinte ont révolutionné notre compréhension de l'univers, unifiant l'espace et le temps en une seule structure mathématique.</p>
             <a href="/fr/theorie.html" class="cta-button">En savoir plus <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-content">
-            <a href="/index.html" class="footer-logo">
+            <a href="/index.html" class="footer-logo" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
                 <p>Chronova</p>
             </a>
+
             <nav class="footer-nav" aria-label="Navigation du footer">
                 <p class="footer-nav-title">Liens utiles</p>
                 <ul class="footer-nav-list">
                     <li><a href="/fr/a-propos.html" class="footer-nav-link">À propos</a></li>
-                    <li><a href="/fr/artistes.html" class="footer-nav-link">Mention Légales</a></li>
+                    <li><a href="/fr/artistes.html" class="footer-nav-link">Mentions Légales</a></li>
                     <li><a href="/fr/glossaire.html" class="footer-nav-link">Glossaire</a></li>
                     <li><a href="/fr/contact.html" class="footer-nav-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
+
         <div class="footer-social">
             <p class="social-title">Nous suivre</p>
             <div class="social-links">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener">
-                    <img src="/assets/icons/Facebook.svg" alt="Facebook" loading="lazy" />
+                <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
+                    <img src="/assets/icons/Facebook.svg" alt="" aria-hidden="true" loading="lazy" />
                 </a>
-                <a href="https://www.instagram.com" target="_blank" rel="noopener">
-                    <img src="/assets/icons/Instagram.svg" alt="Instagram" loading="lazy" />
+                <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
+                    <img src="/assets/icons/Instagram.svg" alt="" aria-hidden="true" loading="lazy" />
                 </a>
-                <a href="https://www.twitter.com" target="_blank" rel="noopener">
-                    <img src="/assets/icons/Twitter.svg" alt="Twitter" loading="lazy" />
+                <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Twitter">
+                    <img src="/assets/icons/Twitter.svg" alt="" aria-hidden="true" loading="lazy" />
                 </a>
             </div>
         </div>
+
         <div class="footer-bottom">
             <hr />
             <p>Lina BEN MABROUK TP B1</p>
-            <p>© Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de Montbéliard</p>
+            <p>© Projet réalisé en 2025 dans le cadre d'un exercice pédagogique au département MMi de Montbéliard</p>
         </div>
     </footer>
 </body>
