--- a/fr/effet-matilda.html
+++ b/fr/effet-matilda.html
@@ -29,14 +29,19 @@
     <header class="header">
         <a href="/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
+            <span class="logo-text">Chronova</span>
         </a>
-
+        <div class="header-actions">
+            <button class="lang-switch" aria-label="Changer la langue du site">
+                <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
+                <span class="lang-label">FR</span>
+            </button>
         <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
         </button>
-
+        </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
                 <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
