--- a/fr/histoire.html
+++ b/fr/histoire.html
@@ -27,28 +27,33 @@
 
 <body>
     <header class="header">
-        <a href="/index.html" class="logo" aria-label="Retour à l'accueil">
+        <a href="/index.html" class="logo">
             <img src="/assets/icons/Logo.svg" alt="Logo Chronova" loading="lazy" />
+            <span class="logo-text">Chronova</span>
         </a>
-
-        <button class="menu-toggle" aria-label="Ouvrir le menu de navigation" aria-expanded="false">
+        <div class="header-actions">
+            <button class="lang-switch" aria-label="Changer la langue du site">
+                <img src="/assets/icons/Globe.svg" alt="Icône de globe" loading="lazy" />
+                <span class="lang-label">FR</span>
+            </button>
+        <button class="menu-toggle" aria-label="Menu de navigation" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
         </button>
-
+        </div>
         <nav class="nav" aria-label="Navigation principale">
             <ul class="nav-list">
                 <li><a href="/fr/histoire.html" class="nav-link">Mileva Einstein : La Chercheuse</a></li>
                 <li><a href="/fr/effet-matilda.html" class="nav-link">Effet Matilda</a></li>
                 <li><a href="/fr/article.html" class="nav-link">Les Femmes de Sciences</a></li>
                 <li><a href="/fr/theorie.html" class="nav-link">Espace-Temps & Vitesse de la Lumière</a></li>
-                <li><a href="/fr/livre.html" class="nav-link">L’Espace-Temps, Jean-Paul Auffray</a></li>
+                <li><a href="/fr/livre.html" class="nav-link">L’Espace-Temps, Jeaun-Paul Auffray</a></li>
                 <li><a href="/fr/film.html" class="nav-link">Retour vers le Futur</a></li>
             </ul>
         </nav>
     </header>
-
+    
     <main>
         <div class="hero">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
