--- a/fr/a-propos.html
+++ b/fr/a-propos.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-        <div class="hero">
+        <div class="hero has-button">
             <a href="/index.html" class="hero-button" aria-label="Retour à l'accueil">
                 <img src="/assets/icons/fleche_gauche.svg" alt="" loading="lazy" /> Retour à l'accueil
             </a>
