--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
             <a href="/fr/histoire.html" class="cta-button">Découvrir son histoire <img src="assets/icons/fleche_bas.svg" alt="" loading="lazy" /></a>
         </section>
 
+        <p class="section-separator">∑∫∂∇π∞</p>
+
         <section class="discover">
-            <title class="section-title">• Explorer •</title>
+            <h2 class="section-title">• Explorer •</h2>
             <div class="cards-container">
                 <a href="/fr/article.html" class="card">
                     <img src="assets/icons/article.svg" alt="Article" loading="lazy" />
@@ -80,19 +82,18 @@
                     <p class="card-button">Lire l'article <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
                 <a href="/fr/film.html" class="card">
-                    <img src="assets/img/film.avif" alt="Film" loading="lazy" />
+                    <img src="assets/img/film.avif"  class="future" alt="Film" loading="lazy" />
                     <h3 class="card-title">Retour vers le Futur</h3>
-                    <p class="card-subtitle"><img src="assets/icons/calendrier.svg" alt="Calendrier" loading="lazy" /> 1985 - Réalisateur : Robert Zemeckis</p>
+                    <p class="card-date"><img src="assets/icons/calendrier.svg" alt="Calendrier" loading="lazy" /> 1985 - Réalisateur : Robert Zemeckis</p>
                     <p>Film emblématique sur le voyage dans le temps qui explore les concepts de relativité, de paradoxes temporels et l'impact du passé sur le futur. Un outil parfait pour discuter de la physique du temps et de l'espace.</p>
-                    <p class="card-button">En savoir plus <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></p>
                 </a>
             </div>
         </section>
 
         <section class="content">
-            <h2 class="section-title">L'Espace-Temps & La Lumière</h2>
+            <h2 class="content-title">L'Espace-Temps & La Lumière</h2>
             <p class="content-description">Les travaux de Mileva Einstein sur la relativité restreinte ont révolutionné notre compréhension de l'univers, unifiant l'espace et le temps en une seule structure mathématique.</p>
-            <a href="/fr/theorie.html" class="cta-button">En savoir plus <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
+            <a href="/fr/theorie.html" class="information">En savoir plus <img src="assets/icons/fleche.svg" alt="" loading="lazy" /></a>
         </section>
     </main>
     <footer class="footer">
