--- a/fr/effet-matilda.html
+++ b/fr/effet-matilda.html
@@ -93,17 +93,18 @@
             <p>
                 Comprendre l’effet Matilda permet non seulement de revisiter l’histoire des sciences sous un angle plus juste, mais aussi de réfléchir aux mécanismes contemporains de discrimination et de valorisation dans le milieu scientifique. Mettre en lumière ces biais contribue à créer des environnements de recherche plus équitables et à reconnaître pleinement les contributions des femmes aux découvertes scientifiques majeures.
             </p>
-
             <div class="cards-container">
-                <img src="/assets/icons/Medal.svg" alt="card-image" loading="lazy" />
-                <h3 class="card-title">Conséquences</h3>
-                <ul>
-                    <li>Perte de reconnaissance historique</li>
-                    <li>Découragement des futures chercheuses</li>
-                    <li>Perpétuation des stéréotypes de genre</li>
-                    <li>Histoire de la science incomplète</li>
-                    <li>Inégalités persistantes</li>
-                </ul>
+                <div class="card">
+                    <img src="/assets/icons/Medal.svg" alt="Icône école" loading="lazy" />
+                    <h3 class="card-title">Conséquences</h3>
+                    <ul class="card-list">
+                        <li>Perte de reconnaissance historique</li>
+                        <li>Découragement des futures chercheuses</li>
+                        <li>Perpétuation des stéréotypes de genre</li>
+                        <li>Histoire de la science incomplète</li>
+                        <li>Inégalités persistantes</li>
+                    </ul>
+                </div>
             </div>
         </section>
 
