--- a/fr/histoire.html
+++ b/fr/histoire.html
@@ -69,7 +69,7 @@
         </section>
 
         <section class="article-section">
-            <h2 class="section-title">Une Brillante Étudiante</h2>
+            <h2 class="article-title">Une Brillante Étudiante</h2>
 
             <p>
                 Mileva Marić est née le 19 décembre 1875 à Titel, dans l’Empire austro-hongrois (aujourd’hui en Serbie), au sein d’une famille qui valorise l’éducation. Très tôt, elle se distingue par des capacités intellectuelles hors du commun, en particulier en mathématiques et en sciences. Dans un contexte social où les femmes sont rarement encouragées à poursuivre des études scientifiques avancées, Mileva doit surmonter de nombreux obstacles pour accéder à l’enseignement supérieur.
@@ -83,7 +83,7 @@
                 En 1896, Mileva Marić devient l’une des premières femmes admises au Polytechnicum de Zurich (aujourd’hui l’ETH Zurich) pour y étudier la physique et les mathématiques. Elle est alors la seule femme inscrite dans la section de physique, évoluant dans un environnement académique largement dominé par les hommes. Cette situation l’expose à une pression constante, mais elle s’impose par son sérieux, sa rigueur scientifique et sa capacité d’analyse.
             </p>
 
-            <img src="/assets/img/zurich.avif" class="card-image" alt="Photographie de Zurich" loading="lazy" />
+            <img src="/assets/img/zurich.avif" class="article-image" alt="Photographie de Zurich" loading="lazy" />
 
             <p>
                 Durant ses études, Mileva se spécialise dans des domaines complexes comme la physique théorique et les mathématiques avancées. Elle se distingue par une approche méthodique et une compréhension approfondie des concepts scientifiques, qualités reconnues par certains de ses camarades et professeurs. Malgré cela, elle doit composer avec des difficultés institutionnelles et personnelles qui freinent sa reconnaissance académique.
@@ -94,23 +94,25 @@
             </p>
 
             <div class="cards-container">
-                <img src="/assets/icons/School.svg" alt="Icône école" loading="lazy" />
-                <h3 class="card-title">Formation</h3>
-                <ul>
-                    <li>Lycée de Zagreb (1890-1894)</li>
-                    <li>Polytechnicum de Zurich (1896-1900)</li>
-                    <li>Études en physique théorique</li>
-                    <li>Mathématiques avancées</li>
-                </ul>
+                <div class="card">
+                    <img src="/assets/icons/School.svg" alt="Icône école" loading="lazy" />
+                    <h3 class="card-title">Formation</h3>
+                    <ul class="card-list">
+                        <li>Lycée de Zagreb (1890-1894)</li>
+                        <li>Polytechnicum de Zurich (1896-1900)</li>
+                        <li>Études en physique théorique</li>
+                        <li>Mathématiques avancées</li>
+                    </ul>
+                </div>
             </div>
 
-            <h2 class="section-title">La Collaboration avec Albert Einstein</h2>
+            <h2 class="article-title">La Collaboration avec Albert Einstein</h2>
 
             <p>
                 La relation intellectuelle entre Mileva Marić et Albert Einstein dépasse largement le cadre d’un simple lien personnel. Leur correspondance, conservée en partie, révèle une véritable dynamique de travail scientifique. Dans plusieurs lettres adressées à Mileva, Albert Einstein emploie des expressions telles que « notre travail » ou « notre article » pour évoquer leurs recherches communes, en particulier dans le domaine de la physique théorique. Ces formulations laissent entendre une collaboration active, fondée sur des échanges d’idées, des discussions scientifiques approfondies et un travail intellectuel partagé.
             </p>
 
-            <img src="/assets/img/zurich.avif" class="card-image" alt="Photographie de Zurich" loading="lazy" />
+            <img src="/assets/img/mileva_einstein.avif" class="card-image" alt="Photographie de Zurich" loading="lazy" />
 
             <p>
                 Cette collaboration atteint son apogée en 1905, une année aujourd’hui connue sous le nom d’Annus Mirabilis (année miraculeuse). Au cours de cette période exceptionnelle, Albert Einstein publie plusieurs articles qui bouleversent les fondements de la physique moderne. Parmi eux figurent les travaux sur l’effet photoélectrique, le mouvement brownien, la relativité restreinte, ainsi que l’énoncé de la célèbre équation E = mc², qui établit l’équivalence entre la masse et l’énergie. Ces avancées marquent un tournant décisif dans l’histoire des sciences.
@@ -125,28 +127,32 @@
             </p>
 
             <div class="cards-container">
-                <img src="/assets/icons/Microscope.svg" alt="Icône microscope" loading="lazy" />
-                <h3 class="card-title">Domaines de Recherche</h3>
-                <ul>
-                    <li>Relativité restreinte</li>
-                    <li>Thermodynamique</li>
-                    <li>Conductivité thermique</li>
-                    <li>Physique théorique</li>
-                </ul>
+                <div class="card">
+                    <img src="/assets/icons/Microscope.svg" alt="Icône microscope" loading="lazy" />
+                    <h3 class="card-title">Domaines de Recherche</h3>
+                    <ul class="card-list">
+                        <li>Relativité restreinte</li>
+                        <li>Thermodynamique</li>
+                        <li>Conductivité thermique</li>
+                        <li>Physique théorique</li>
+                    </ul>
+                </div>
             </div>
+
         </section>
 
         <section class="other-articles">
-            <h3 class="section-title">Lire aussi</h3>
+            <hr>
+            <h3 class="other-articles-title">Lire aussi</h3>
 
-            <a href="/fr/article.html" class="cta-button">
+            <a href="/fr/article.html" class="other-articles-button">
                 Femme de Science dans la Littérature
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
 
             <br>
 
-            <a href="/fr/theorie.html" class="cta-button">
+            <a href="/fr/theorie.html" class="other-articles-button">
                 Espace-Temps & Vitesse de la Lumière
                 <img src="/assets/icons/fleche.svg" alt="" aria-hidden="true" loading="lazy" />
             </a>
